K8s/cert-manager/ingress/green-hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-green-whale-svc
  labels:
    app: hello-green-whale-app
spec:
  selector:
    app: hello-green-whale-app
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
