K8s/cert-manager/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-whales-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello2-world.info
      http:
        paths:
          - path: /green/(.*)
            backend:
              serviceName: hello-green-whale-svc
              servicePort: 80
          - path: /blue/(.*)
            backend:
              serviceName: hello-blue-whale-svc
              servicePort: 80
