K8s/cert-manager/ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: hello-bridgebud.io
      http:
        paths:
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: hello-green-whale-svc
                port:
                  number: 80
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: hello-blue-whale-svc
                port:
                  number: 80
